--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
     <body>
         <div id="viewDiv"></div>
         <div id="layerDiv" class="esri-widget-pane">
-            <input type="radio" name="layerList" value="southAtl" checked> South Atlantic Census Division<br>
-            <input type="radio" name="layerList" value="eastSouth"> East South Central Census Division<br>
+                <input type="radio" name="layerList" value="southAtl" checked> South Atlantic Census Division<br>
+                <input type="radio" name="layerList" value="eastSouth"> East South Central Census Division<br>
+                <input type="radio" name="layerList" value="westSouth" id="region3"> West South Central Census Division<br>
+                <input type="radio" name="layerList" value="mountain"> Mountain Census Division<br>
+                <input type="radio" name="layerList" value="pacific"> Pacific Census Division<br>
+                <input type="radio" name="layerList" value="eastNorth"> East North Central Census Division<br>
+                <input type="radio" name="layerList" value="westNorth"> West North Central Census Division<br>
+                <input type="radio" name="layerList" value="newEng"> New England Census Division<br>
+                <input type="radio" name="layerList" value="midAtl" id="region"> Mid-Atlantic Census Division<br>
         </div>
     </body>
     <script>
