--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="layerDiv" class="esri-widget-pane">
                 <input type="radio" name="layerList" value="southAtl" checked> South Atlantic Census Division<br>
                 <input type="radio" name="layerList" value="eastSouth"> East South Central Census Division<br>
-                <input type="radio" name="layerList" value="westSouth" id="region3"> West South Central Census Division<br>
+                <input type="radio" name="layerList" value="westSouth"> West South Central Census Division<br>
                 <input type="radio" name="layerList" value="mountain"> Mountain Census Division<br>
                 <input type="radio" name="layerList" value="pacific"> Pacific Census Division<br>
                 <input type="radio" name="layerList" value="eastNorth"> East North Central Census Division<br>
